# sport-news

./: README.md  README.pt-br.md  docker-compose.yml
api-sport-news/: Dockerfile  entrypoint.sh  pom.xml
api-sport-news/src/main/java/com/sportnews/api/: SportNewsApplication.java
api-sport-news/src/main/java/com/sportnews/api/controller/: GameController.java
api-sport-news/src/main/java/com/sportnews/api/dto/: GameDto.java  Status.java  Summary.java
api-sport-news/src/main/java/com/sportnews/api/repository/: GameRepository.java
api-sport-news/src/main/java/com/sportnews/api/service/: GameService.java
api-sport-news/src/main/resources/: application-dev.yml  application.yml
api-sport-news/src/test/java/com/sportnews/api/: SportNewsApplicationTests.java
crawler-sport-news/: README.md  README.pt-br.md  main.py  middlewares.py  pyproject.toml  requirements.txt
crawler-sport-news/db/: database.py
crawler-sport-news/service/: game_service.py  job_service.py  rabbitmq_service.py  scrapy_service.py  selenium_service.py
jobs-sport-news/: .env  README.md  README.pt-br.md  main.py  pyproject.toml  requirements.txt
jobs-sport-news/db/: database.py
jobs-sport-news/service/: job_service.py  rabbitmq_service.py
persist-sport-news/: README.md  go.mod  go.sum  mongo.go  receive.go
