[tool.poetry]
name = "jobs-sport-news"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "jobs_sport_news"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "0.21.0"
schedule = "1.1.0"
pymongo = "4.2.0"
pika = "1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
